--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,12 @@
 					<soliditySourceFiles/>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>com.hubspot.maven.plugins</groupId>
+				<artifactId>prettier-maven-plugin</artifactId>
+				<!-- Find the latest version at https://github.com/jhipster/prettier-java/releases -->
+				<version>0.21</version>
+			</plugin>
 		</plugins>
 	</build>
 
